--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Neto Ofoegbu</title>
-    <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/assets/css/aos.css">
-    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/css/aos.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 
 </head>
 
 <body data-bs-spy="scroll" data-bs-target=".navbar"></body>>
-<script src="/assets/js/bootstrap.bundle.min.js"></script>
-<script src="/assets/js/aos.js"></script>
-<script src="/assets/js/main.js"></script>
+<script src="assets/js/bootstrap.bundle.min.js"></script>
+<script src="assets/js/aos.js"></script>
+<script src="assets/js/main.js"></script>
 <script src="https://kit.fontawesome.com/9db7ffcc57.js" crossorigin="anonymous"></script>
 
 
