makes more changes

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="container flex-lg-column">
         <a class="navbar-brand mx-lg-auto mb-lg-4" href="#">
             <span class="h4 fw-bold d-block d-lg-none">Neto Ofoegbu</span>
-            <img src="/assets/images/Neto.jpg" class="d-none d-lg-block rounded-circle">
+            <img src="assets/images/Neto.jpg" class="d-none d-lg-block rounded-circle">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -178,7 +178,7 @@
                 <div class="col-md-6" data-aos="fade-up">
                     <div class="custom-card rounded-5 bg-base">
                         <div class="custom-card-image rounded-5">
-                            <img src="/assets/images/Moodboard (Custom).png" class="rounded-5" alt="">
+                            <img src="assets/images/Moodboard (Custom).png" class="rounded-5" alt="">
                         </div>
                         <div class="custom-card-content p-4">
                             <h4>Portfolio Moodboard</h4>
@@ -191,7 +191,7 @@
                 <div class="col-md-6" data-aos="fade-up" data-aos-delay="300">
                     <div class="custom-card rounded-5 bg-base">
                         <div class="custom-card-image rounded-5">
-                            <img src="/assets/images/branko-stancevic-GI1hwOGqGtE-unsplash (Custom).jpg"
+                            <img src="assets/images/branko-stancevic-GI1hwOGqGtE-unsplash (Custom).jpg"
                                 class="rounded-5" alt="">
                         </div>
                         <div class="custom-card-content p-4">
