mkes final changes

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                     <div class="col-lg-6" data-aos="fade-up">
                         <div class="custom-card rounded-5 bg-base">
                             <div class="custom-card-image rounded-5">
-                                <img src="/assets/images/Style tile (3) (Custom).png" class="rounded-5" alt="">
+                                <img src="assets/images/Style tile (3) (Custom).png" class="rounded-5" alt="">
                             </div>
                             <div class="custom-card-content p-4">
                                 <h4>Portfolio Style Guide</h4>
@@ -222,7 +222,7 @@
                     <div class="col-lg-6" data-aos="fade-up" data-aos-delay="300">
                         <div class="custom-card rounded-5 bg-base">
                             <div class="custom-card-image rounded-5">
-                                <img src="/assets/images/lofi wireframes (Custom).png" class="rounded-5" alt="">
+                                <img src="assets/images/lofi wireframes (Custom).png" class="rounded-5" alt="">
                             </div>
                             <div class="custom-card-content p-4">
                                 <h4>Lo-fi Wireframing</h4>
